force-app/main/default/objects/Contact/fields/Home_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Purchase_Date__c</fullName>
    <label>Home Purchase Date</label>
    <type>Date</type>
</CustomField>