force-app/main/default/objects/Contact/fields/How_Disability_Affects_Ability_to_Work__c.field-meta.xml
<CustomField>
    <fullName>How_Disability_Affects_Ability_to_Work__c</fullName>
    <label>How Disability Affects Ability to Work</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>