force-app/main/default/objects/Contact/fields/How_Heard_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Heard_About_Us__c</fullName>
    <label>How Heard About Us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Brochure/Newsletter about PLAN</fullName>
            </value>
            <value>
                <fullName>Community Organization</fullName>
            </value>
            <value>
                <fullName>Family/Friend</fullName>
            </value>
            <value>
                <fullName>Financial Professional</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Presentation/Workshop/Conference</fullName>
            </value>
            <value>
                <fullName>Previous Experience with PLAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>