force-app/main/default/objects/Contact/fields/If_Bene_Owns_Is_There_a_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>If_Bene_Owns_Is_There_a_Mortgage__c</fullName>
    <label>If Bene Owns Is There a Mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>