force-app/main/default/objects/Contact/fields/Imported_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Imported_Campaign__c</fullName>
    <description>For program coordinator and marketing use</description>
    <label>Imported Campaign</label>
    <length>45</length>
    <type>Text</type>
</CustomField>