force-app/main/default/objects/Contact/fields/Inactive_Beneficiary_List__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Beneficiary_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Beneficiary List</label>
    <type>Checkbox</type>
</CustomField>