force-app/main/default/objects/Contact/fields/Inactive_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Owner__c</fullName>
    <formula>Owner.IsActive = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Owner</label>
    <type>Checkbox</type>
</CustomField>