force-app/main/default/objects/Contact/fields/Insurance_Company_for_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_for_Vehicle__c</fullName>
    <label>Insurance Company for Vehicle</label>
    <length>150</length>
    <type>Text</type>
</CustomField>