force-app/main/default/objects/Contact/fields/Intake_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Completed_Date__c</fullName>
    <label>Intake Completed Date</label>
    <type>Date</type>
</CustomField>