force-app/main/default/objects/Contact/fields/IsHidden__c.field-meta.xml
<CustomField>
    <fullName>IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHidden</label>
    <type>Checkbox</type>
</CustomField>