force-app/main/default/objects/Contact/fields/Landline_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landline_Phone__c</fullName>
    <label>Landline Phone</label>
    <type>Phone</type>
</CustomField>