force-app/main/default/objects/Contact/fields/Last_4_SS_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_4_SS_Number__c</fullName>
    <label>Last 4 SS Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>