force-app/main/default/objects/Contact/fields/Last_Happy_Birthday_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Happy_Birthday_Email_Sent__c</fullName>
    <label>Last Happy Birthday Email Sent</label>
    <type>Date</type>
</CustomField>