force-app/main/default/objects/Contact/fields/Living_Address__c.field-meta.xml
<CustomField>
    <fullName>Living_Address__c</fullName>
    <formula>if(!isblank(Living_Street_1__c ),Living_Street_1__c&amp;BR() ,null)&amp;
if(!isblank(Living_Street_2__c ),Living_Street_2__c&amp;BR() ,null)&amp;
if(!isblank(Living_City__c ),Living_City__c ,null)&amp;&quot;,&quot;&amp;if(!isblank(text(Living_State__c) ),text(Living_State__c) ,null)&amp;&quot;  &quot;&amp;if(!isblank(Living_Zip_Code__c ),Living_Zip_Code__c ,null)&amp;
if(!isblank(Living_Country__c ),BR()&amp;Living_Country__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Living Address</label>
    <type>Text</type>
</CustomField>