force-app/main/default/objects/Contact/fields/Living_City__c.field-meta.xml
<CustomField>
    <fullName>Living_City__c</fullName>
    <label>Living City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>