force-app/main/default/objects/Contact/fields/Living_Country__c.field-meta.xml
<CustomField>
    <fullName>Living_Country__c</fullName>
    <defaultValue>&quot;USA&quot;</defaultValue>
    <label>Living Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>