force-app/main/default/objects/Contact/fields/Living_County_old__c.field-meta.xml
<CustomField>
    <fullName>Living_County_old__c</fullName>
    <label>Living County_old</label>
    <length>30</length>
    <type>Text</type>
</CustomField>