force-app/main/default/objects/Contact/fields/Living_State__c.field-meta.xml
<CustomField>
    <fullName>Living_State__c</fullName>
    <label>Living State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>