force-app/main/default/objects/Contact/fields/Living_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Living_Street_1__c</fullName>
    <label>Living Street 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>