force-app/main/default/objects/Contact/fields/Living_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Living_Street_2__c</fullName>
    <label>Living Street 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>