force-app/main/default/objects/Contact/fields/Living_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Living_Zip_Code__c</fullName>
    <label>Living Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>