force-app/main/default/objects/Contact/fields/Majority_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>Majority_Letter_Date__c</fullName>
    <label>Majority Letter Date</label>
    <type>Date</type>
</CustomField>