force-app/main/default/objects/Contact/fields/Medicaid_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Number__c</fullName>
    <label>Medicaid Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>