force-app/main/default/objects/Contact/fields/Medical_Buyin__c.field-meta.xml
<CustomField>
    <fullName>Medical_Buyin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Buy-in</label>
    <type>Checkbox</type>
</CustomField>