force-app/main/default/objects/Contact/fields/Medical_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Medical_Diagnoses__c</fullName>
    <label>Medical Diagnoses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>