force-app/main/default/objects/Contact/fields/Medical_Lien_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Medical_Lien_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Lien Satisfied</label>
    <type>Checkbox</type>
</CustomField>