force-app/main/default/objects/Contact/fields/Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Diagnosis__c</fullName>
    <label>Mental Health Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>