force-app/main/default/objects/Contact/fields/Mobility_Affected_By_Disability__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Affected_By_Disability__c</fullName>
    <label>Mobility Affected By Disability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>