force-app/main/default/objects/Contact/fields/MSA_Type__c.field-meta.xml
<CustomField>
    <fullName>MSA_Type__c</fullName>
    <inlineHelpText>MSA Type should only be filled if &apos;MSA&apos; is selected in the Trust Type field. Leave this field blank for all other Trust Types.</inlineHelpText>
    <label>MSA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pooled Trust II</fullName>
            </value>
            <value>
                <fullName>Private Trust II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>