force-app/main/default/objects/Contact/fields/No_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>No_Current_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Current Address</label>
    <type>Checkbox</type>
</CustomField>