force-app/main/default/objects/Contact/fields/Number_of_Active_Trusts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Trusts__c</fullName>
    <label># of Active Trusts</label>
    <summaryFilterItems>
        <field>Trust__c.Trust_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Trust__c.Beneficiary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>