force-app/main/default/objects/Contact/fields/Number_of_Closings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Closings__c</fullName>
    <label># of Closings</label>
    <summaryForeignKey>Closing__c.Beneficiary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>