force-app/main/default/objects/Contact/fields/Number_of_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Occupants__c</fullName>
    <label>Number of Occupants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>