force-app/main/default/objects/Contact/fields/Number_of_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Referrals__c</fullName>
    <label># of Referrals</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>