force-app/main/default/objects/Contact/fields/Number_of_Spending_Plans__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Spending_Plans__c</fullName>
    <label># of Spending Plans</label>
    <summaryForeignKey>Spending_Plan__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>