force-app/main/default/objects/Contact/fields/Number_of_Trusts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trusts__c</fullName>
    <label># of Trusts</label>
    <summaryForeignKey>Trust__c.Beneficiary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>