force-app/main/default/objects/Contact/fields/Other_Alternate_Rep__c.field-meta.xml
<CustomField>
    <fullName>Other_Alternate_Rep__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Other Alternate Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>