force-app/main/default/objects/Contact/fields/Other_Heard_About_Us_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Heard_About_Us_Details__c</fullName>
    <label>Other Heard About Us Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>