force-app/main/default/objects/Contact/fields/Other_Marital_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Marital_Status_Details__c</fullName>
    <label>Other Marital Status Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>