force-app/main/default/objects/Contact/fields/Other_People_Who_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_People_Who_Support__c</fullName>
    <inlineHelpText>In addition to the Primary and Alternate Representatives, are there indiiduals that are an important part of the beneificary&apos;s community and support system?</inlineHelpText>
    <label>Other People Who Support</label>
    <type>TextArea</type>
</CustomField>