force-app/main/default/objects/Contact/fields/Other_Prognosis_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Prognosis_Information__c</fullName>
    <label>Other Prognosis Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>