force-app/main/default/objects/Contact/fields/Other_Real_Property_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Real_Property_Status_Details__c</fullName>
    <label>Other Real Property Status Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>