force-app/main/default/objects/Contact/fields/Owns_Real_Property__c.field-meta.xml
<CustomField>
    <fullName>Owns_Real_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owns Real Property</label>
    <type>Checkbox</type>
</CustomField>