force-app/main/default/objects/Contact/fields/People_Who_Support_Everyday__c.field-meta.xml
<CustomField>
    <fullName>People_Who_Support_Everyday__c</fullName>
    <label>People Who Support Everyday</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>