force-app/main/default/objects/Contact/fields/Petition_to_Estab_Estate_Plan_Received__c.field-meta.xml
<CustomField>
    <fullName>Petition_to_Estab_Estate_Plan_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Petition to Estab Estate Plan Received</label>
    <type>Checkbox</type>
</CustomField>