force-app/main/default/objects/Contact/fields/Policy_for_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Policy_for_Vehicle__c</fullName>
    <label>Policy # for Vehicle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>