force-app/main/default/objects/Contact/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Power of Attorney</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (POA)</relationshipLabel>
    <relationshipName>Contacts7</relationshipName>
    <type>Lookup</type>
</CustomField>