force-app/main/default/objects/Contact/fields/Power_of_Attorney_Received__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power of Attorney Received</label>
    <type>Checkbox</type>
</CustomField>