force-app/main/default/objects/Contact/fields/Prepaid_Burial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Burial_Notes__c</fullName>
    <label>Prepaid Burial Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>