force-app/main/default/objects/Contact/fields/Prepaid_Funeral_Burial_Contract_picklist__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Funeral_Burial_Contract_picklist__c</fullName>
    <label>Prepaid Funeral/Burial Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>