force-app/main/default/objects/Contact/fields/Primary_Disability__c.field-meta.xml
<CustomField>
    <fullName>Primary_Disability__c</fullName>
    <label>Primary Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Disability</valueSetName>
    </valueSet>
</CustomField>