force-app/main/default/objects/Contact/fields/Proof_of_Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Benefits_Notes__c</fullName>
    <label>Proof of Benefits Notes</label>
    <type>TextArea</type>
</CustomField>