force-app/main/default/objects/Contact/fields/Proof_of_Benefits_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Benefits_Received_Date__c</fullName>
    <label>Proof of Benefits Received Date</label>
    <type>Date</type>
</CustomField>