force-app/main/default/objects/Contact/fields/QBOL_ID__c.field-meta.xml
<CustomField>
    <fullName>QBOL_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>QBOL ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>