force-app/main/default/objects/Contact/fields/QBOL_Name__c.field-meta.xml
<CustomField>
    <fullName>QBOL_Name__c</fullName>
    <label>QBOL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>