force-app/main/default/objects/Contact/fields/Quarterly_Statements__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Statements__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Quarterly Statements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>