force-app/main/default/objects/Contact/fields/Read_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Read_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Receipts</label>
    <type>Checkbox</type>
</CustomField>