force-app/main/default/objects/Contact/fields/Referring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact who referred Beneficiary. Create a Contact record if needed.</inlineHelpText>
    <label>Referring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Contacts8</relationshipName>
    <type>Lookup</type>
</CustomField>