force-app/main/default/objects/Contact/fields/Referring_Organization__c.field-meta.xml
<CustomField>
    <fullName>Referring_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (#2 Referring Organization)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>