force-app/main/default/objects/Contact/fields/Remainderperson__c.field-meta.xml
<CustomField>
    <fullName>Remainderperson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remainderperson</label>
    <type>Checkbox</type>
</CustomField>