force-app/main/default/objects/Contact/fields/Rent_Own__c.field-meta.xml
<CustomField>
    <fullName>Rent_Own__c</fullName>
    <label>Rent / Own</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>