force-app/main/default/objects/Contact/fields/Repeat_Caller__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Caller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Caller</label>
    <type>Checkbox</type>
</CustomField>