force-app/main/default/objects/Contact/fields/Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>Representative_Email__c</fullName>
    <label>Representative Email</label>
    <type>Email</type>
</CustomField>