force-app/main/default/objects/Contact/fields/Representative_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Representative_First_Name__c</fullName>
    <label>Representative First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>