force-app/main/default/objects/Contact/fields/Representative_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Representative_Last_Name__c</fullName>
    <label>Representative Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>