force-app/main/default/objects/Contact/fields/Representative_Organization__c.field-meta.xml
<CustomField>
    <fullName>Representative_Organization__c</fullName>
    <label>Representative Organization</label>
    <length>150</length>
    <type>Text</type>
</CustomField>